# MF-NeRF

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  WarperPytorch.py  active_opt.py  active_train.py  benchmark_llff_hash_vs.sh  benchmark_llff_hash_vs2.sh  benchmark_llff_hash_vs3.sh  benchmark_llff_nerf_mf.sh  benchmark_llff_nerf_mf2.sh  benchmark_llff_nerf_mf_u.sh  benchmark_llff_nerf_mf_vs.sh  benchmark_nvsf_nerf_mf_vs.sh  binarry_classifer_on_performace.py  binarry_classifer_on_performace2.py  cams_test.py  cams_test.sh  data_generater.py  data_opt.py  epipolar_viewer.sh  eval.py  eval_benchmark_llff_nerf_mf.sh  eval_opt.py  losses.py  mf-nerf_env.yml  opt.py  process_llff.py  process_logs.py  process_logs_landa.py  read_data_from_csv.py  read_data_from_logs.py  requirements.txt  test.ipynb  train.py  train_nsvf.py  train_v2.py  train_vcurf.py  uncert_utils.py  (+1 more)
Data/: VS_Data.csv  nerfvs.csv  nerfvs_2.csv
benchmarking/: benchmark_synthetic_nerf.sh
datasets/: __init__.py  base.py  colmap.py  colmap_utils.py  nerf.py  nerfpp.py  nsvf.py  ray_utils.py  rtmv.py  splitnerfpp.py  vsdataset.py
epipolar/: pyfmatrix_viewer.py
flip/: README.md  flip_api.py
models/: custom_functions.py  networks.py  rendering.py  virtual_cam.py
scripts/: benchmark_auc.sh  benchmark_auc2.sh  benchmark_entropy_gpu0.sh  benchmark_lego_hash_landa_gpu0.sh  benchmark_lego_hash_landa_gpu1.sh  benchmark_llff_ac_viper_gpu0.sh  benchmark_llff_ac_viper_gpu1.sh  benchmark_llff_hash_siai2_gpu1.sh  benchmark_vcurf.sh  (+28 more)
warp/: CMakeLists.txt  render_tgt_volume.cpp  setup.py  warp_utils.py
(+205 files in other folders)
